# arena-eval-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: ci.yml
data/sample/: sample_adsb_airspy_decoder_metrics_1m.jsonl  sample_adsb_airspy_metrics_1m.jsonl  sample_dist_1m.jsonl  sample_dist_pos_health_1m.jsonl  sample_dist_signal_stats_1m.jsonl  sample_flight_data_airport_movements.csv  sample_plao_pos_pos_20260124.jsonl  sample_plao_pos_pos_20260125.jsonl  sample_plao_pos_pos_20260126.jsonl  sample_plao_pos_pos_20260127.jsonl  sample_plao_pos_pos_20260128.jsonl  sample_plao_pos_pos_20260211.jsonl  sample_plao_pos_pos_20260212.jsonl  sample_plao_pos_pos_20260213.jsonl  sample_plao_pos_pos_20260214.jsonl  sample_plao_pos_pos_20260215.jsonl  sample_plao_pos_pos_20260216.jsonl  sample_plao_pos_pos_20260217.jsonl  sample_plao_pos_pos_20260218.jsonl  sample_plao_pos_pos_20260219.jsonl  sample_plao_pos_pos_20260220.jsonl  sample_plao_pos_pos_20260221.jsonl  sample_plao_pos_pos_20260222.jsonl  sample_plao_pos_pos_20260223.jsonl  sample_plao_pos_pos_20260224.jsonl  sample_plao_pos_pos_20260225.jsonl  sample_plao_pos_pos_20260226.jsonl  sample_plao_pos_pos_20260227.jsonl  sample_plao_pos_pos_20260228.jsonl  sample_raw_past_log_change_something.txt
docker/: Dockerfile.cpu  docker-compose.yml
docs/: aeme.md  architecture.md  failure-taxonomy.md  real-data-smoke.md  sample_outputs.md  statistical-assumptions-and-limitations.md
docs/adr/: ADR-artifact-subsystem.md
output/sample/: sample__tmp_signal.csv  sample_adsb_daily_summary.csv  sample_adsb_daily_summary_raw.csv  sample_adsb_daily_summary_v2.csv  sample_adsb_signal_daily_summary.csv  sample_adsb_signal_range_summary.csv  sample_coverage_coverage_trend.csv  sample_fringe_decoding_fringe_decoding_stats.csv  sample_fringe_decoding_fringe_decoding_trend.csv  sample_fringe_decoding_statistical_report.txt  sample_merged_for_ai_manifest.csv  sample_opensky_comparison_opensky_comparison_daily_summary.csv  sample_opensky_comparison_opensky_comparison_stats_report.txt  sample_opensky_comparison_opensky_local_minutely_merged.csv  sample_opensky_comparison_opensky_skipped_days.csv  (+16 more)
scripts/: __init__.py  master.py  phase_config.py  structure
tests/: conftest.py  test_artifacts_e2e.py  test_artifacts_e2e_full.py  test_artifacts_migration.py  test_artifacts_subsystem.py  test_artifacts_verify_replay.py  test_cli.py  test_config.py  test_decision.py  test_entrypoint.py  test_error_policy.py  test_jsonl_parser.py  test_paths.py  test_paths_utils.py  test_phase_config.py  test_pipeline_contract_scripts.py  test_pipeline_minimal.py  test_real_data_smoke.py  test_record_io.py  test_runner.py  test_schema.py  test_settings.py  test_settings_resolution.py  test_smoke.py  test_stages.py  test_stats_utils.py  test_validate_outputs.py
(+111 files in other folders)
